# f70_automate

./: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml  requirements.txt
doc/: WLXAuto_M_J.md
doc/samples/: protocol_pattern.py
scripts/: automate_dashboard.ps1
src/f70_automate/: f70_automate_resouces.py
src/f70_automate/_core/: __init__.py  threading.py
src/f70_automate/_core/config/: __init__.py  env_config.py  yaml_config.py
src/f70_automate/_core/logging/: __init__.py  app_logger.py  console_subscriber.py  file_subscriber.py  mock_subscribers.py  models.py  protocols.py  publisher.py  test_logging.py
src/f70_automate/_core/serial/: __init__.py  serial_async.py  serial_service.py
src/f70_automate/apps/: __init__.py
src/f70_automate/apps/controller/: __init__.py  (+3 more)
src/f70_automate/f70_serial/: __init__.py  f70_operation.py  f70_serial.py
src/f70_automate/resources/: __init__.py  automation_dashboard_settings.yaml  channel_configs.yaml  channel_configs_example.yaml  utils.py
src/f70_automate/sample/: automation_dashboard.py  f70_dashboard.py  serial_async_test.py  wl_dashboard.py
src/f70_automate/serial_service/: __init__.py  serial_async.py  serial_service.py
src/f70_automate/test/: test_channel_config.py  test_wlx_thread.py
src/f70_automate/tests/: test_automation_monitoring.py  test_automation_settings_store.py  test_channel_config.py  test_core_yaml_config.py  test_notification_trigger.py  test_slack_bot_notifier.py  test_wlx_thread.py
src/f70_automate/wavelogger/: channel_config.py  wlx_thread.py  wlx_wrapper.py
(+49 files in other folders)
