[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "f70_automate"
version = "0.1.0"
dependencies = [
    "pywin32",
    "streamlit",
    "pyserial",
    "PyYAML",
    "python-dotenv",
    "slack_sdk",
]

[tool.setuptools.packages.find]
where = ["src"]
